<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku</string>
    <string name="main_title">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="about_text">        \
        Sudoku is a logic-based number placement puzzle. Starting with a partially completed 9x9 grid, the objective is to fill the grid so that each row, each column, and each of 3x3 boxes(also called <i>blocks</i>) contains the digit 1 to 9 exactly once.</string>
    <string name="title_activity_about">About Android Sudoku</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">settings_shortcut</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play Background Music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="game_title">Game</string>
    <string name="no_moves_label">No Moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>

</resources>
