<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@color/background"
    android:padding="30dip"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24.5dip"
        android:text="@string/main_title" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/continue_button"
        android:layout_below="@+id/continue_button"
        android:layout_marginTop="14dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/new_game_label" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginTop="23dp"
        android:text="@string/continue_label" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_game_button"
        android:layout_below="@+id/new_game_button"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/about_label" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_button"
        android:layout_below="@+id/about_button"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/exit_label" />

</RelativeLayout>